--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    ports:
+        - "8080:8080"
 
   postgres:
     image: postgres:15
