--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,12 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    
+  rabbitmq:
+    image: rabbitmq:3-management
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: password
+    ports:
+      - "5672:5672"
+      - "15672:15672"
